Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-3927

Open Write retries not working and make the setting overridable.

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 6.1.0
    • 6.1.0
    • Cache, HTTP
    • None

    Description

      The setting proxy.config.http.cache.max_open_write_retries is expected to retry a cache open write upon the configured number of times, upon a open write failure. However, the setting doesn't work currently. Opening this jira to fix the setting and to make the setting overridable as well.

      Attachments

        Activity

          People

            sudheerv Sudheer Vinukonda
            sudheerv Sudheer Vinukonda
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: