[TS-3927] Fix Cache Open Write Retries and make the setting overridable.