proxy/http/HttpCacheSM.cc
@@ -172,10 +172,33 @@ HttpCacheSM::state_cache_open_write(int event, void *data)
     break;
 
   case CACHE_EVENT_OPEN_WRITE_FAILED:
-    // The cache is hosed or full or something.
-    // Forward the failure to the main sm
-    open_write_cb = true;
-    master_sm->handleEvent(event, data);
+    if (open_write_tries <= master_sm->t_state.txn_conf->max_cache_open_write_retries) {
+      // Retry open write;
+      open_write_cb = false;
+      do_schedule_in();
+    } else {
+      // The cache is hosed or full or something.
+      // Forward the failure to the main sm
+      Debug("http_cache", "[%" PRId64 "] [state_cache_open_write] cache open write failure %d. "
+                          "done retrying...",
+            master_sm->sm_id, open_write_tries);
+      open_write_cb = true;
+      master_sm->handleEvent(event, data);
+    }
+    break;
+
+  case EVENT_INTERVAL:
+    // Retry the cache open write if the number retries is less
+    // than or equal to the max number of open write retries
+    ink_assert(open_write_tries <= master_sm->t_state.txn_conf->max_cache_open_write_retries);
+    Debug("http_cache", "[%" PRId64 "] [state_cache_open_write] cache open write failure %d. "
+                        "retrying cache open write...",
+          master_sm->sm_id, open_write_tries);
+
+    open_write(
+      &cache_key, lookup_url, read_request_hdr, master_sm->t_state.cache_info.object_read,
+      (time_t)((master_sm->t_state.cache_control.pin_in_cache_for < 0) ? 0 : master_sm->t_state.cache_control.pin_in_cache_for),
+      retry_write, false);
     break;
 
   default:
@@ -286,6 +309,7 @@ HttpCacheSM::open_write(const HttpCacheKey *key, URL *url, HTTPHdr *request, Cac
   ink_assert(request == read_request_hdr || read_request_hdr == NULL);
   this->lookup_url = url;
   this->read_request_hdr = request;
+  cache_key = *key;
 
   // Make sure we are not stuck in a loop where the write
   //  fails but the retry read succeeds causing to issue
@@ -293,7 +317,7 @@ HttpCacheSM::open_write(const HttpCacheKey *key, URL *url, HTTPHdr *request, Cac
   //  that must be revalidated every time)
   // Changed by YTS Team, yamsat Plugin
   if (open_write_tries > master_sm->redirection_tries &&
-      open_write_tries > master_sm->t_state.http_config_param->max_cache_open_write_retries) {
+      open_write_tries > master_sm->t_state.txn_conf->max_cache_open_write_retries) {
     master_sm->handleEvent(CACHE_EVENT_OPEN_WRITE_FAILED, (void *)-ECACHE_DOC_BUSY);
     return ACTION_RESULT_DONE;
   }
